# nemorosa

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  flake.nix  nemorosa.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  release.yml
modules/: __init__.py  api.py  cookies.py  filecompare.py  logger.py
src/nemorosa/: __init__.py  api.py  cli.py  client_instance.py  config.py  core.py  db.py  filecompare.py  filelinking.py  logger.py  scheduler.py  torrent_client.py  webserver.py
src/nemorosa/clients/: client_common.py  deluge.py  qbittorrent.py  rtorrent.py  scgitransport.py  transmission.py
